[package]
name = "bridge_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["ws", "rustls"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time"] }
hex = "0.4.3"
futures = "0.3"
futures-util = "0.3"
k256 = "0.13"

